--- a/index.html
+++ b/index.html
@@ -1434,7 +1434,7 @@
 </center>
 
 <br>
-<input type="button" value="savetofiles" onclick="saveAs("serialnumber.txt","hi")">
+<input type="button" value="savetofiles" onclick="saveAs("serialnumber.txt",retrievecookie('formdata')">
 	
 </div>
 </form>
