--- a/index.html
+++ b/index.html
@@ -1439,11 +1439,10 @@
 </div>
 </form>
 	
-<form onsubmit="download(this['name'].value, this['text'].value)">
+<input type="button" onclick="download(this['name'].value, this['text'].value)">
+	
   <input type="text" name="name" value="test.txt">
   <textarea name="text"></textarea>
-  <input type="submit" value="Download">
-</form>
 	
 <script>
 function download(filename, text) {
