--- a/index.html
+++ b/index.html
@@ -1442,9 +1442,9 @@
   <input type="text" name="text" value="showCookies()">
   <input type="submit" value="Download">
 </form
-	
+<form>
 <button onclick="showCookies()">Show cookies</button>
-	
+	</form>	
 <script>
 function showCookies() {
   const output = document.getElementById('formdata')
