--- a/index.html
+++ b/index.html
@@ -1443,7 +1443,7 @@
   <input type="submit" value="Download">
 </form>
 	
-	
+<script>
 function download(filename, text) {
   var element = document.createElement('a');
   element.setAttribute('href', 'data:text/plain;charset=utf-8,' + encodeURIComponent(text));
