--- a/index.html
+++ b/index.html
@@ -1437,7 +1437,7 @@
 </div>
 </form>
 	
-<form onsubmit="download(this['name'].value,document.getElementById('formdata'))">
+<form onsubmit="download(this['name'].value,document.cookie">
   <input type="text" name="name" value="test.txt">
   <!--<input type="text" name="text" value="showCookies()">-->
   <input type="submit" value="Download">
