--- a/index.html
+++ b/index.html
@@ -1439,11 +1439,13 @@
 	
 <form onsubmit="download(this['name'].value,this['text'].value)">
   <input type="text" name="name" value="test.txt">
-  <input type="text" name="text" value="showCookies()">
+  <input type="text" name="text" id="textid">
   <input type="submit" value="Download">
 </form>
 	
 <script>
+$("#textid").val(hellohello);	
+	
 function download(filename, text) {
   var element = document.createElement('a');
   element.setAttribute('href', 'data:text/plain;charset=utf-8,' + encodeURIComponent(text));
