--- a/index.html
+++ b/index.html
@@ -1438,13 +1438,15 @@
 </form>
 	
 <form onsubmit="download(this['name'].value,this['text'].value)">
-  <input type="text" name="name" value="test.txt">
+  <input type="text" name="name" id="name">
   <input type="text" name="text" id="text">
   <input type="submit" value="Download">
 </form>
 	
 <script>
-$("#text")[0].value =document.cookie;	
+$("#text")[0].value =document.cookie;
+$("#name")[0].value =document.getElementById('serialnumber')+'.txt';
+
 	
 function download(filename, text) {
   var element = document.createElement('a');
