--- a/index.html
+++ b/index.html
@@ -1446,10 +1446,8 @@
 <script>
 oForm = document.forms[index];
 
-	
 $("#text")[0].value =document.cookie;
-$("#name")[0].value =oForm.elements["serialnumber"].value;+'.txt';
-
+$("#name")[0].value =oForm.elements["serialnumber"].value +'.txt';
 	
 function download(filename, text) {
   var element = document.createElement('a');
