--- a/index.html
+++ b/index.html
@@ -1444,7 +1444,7 @@
 </form>
 	
 <script>
-oForm = document.forms[index];
+oForm = document.forms[1];
 
 $("#text")[0].value =document.cookie;
 $("#name")[0].value =oForm.elements["serialnumber"].value +'.txt';
