--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <hr>
 
-<form method="get" action="j-cropsey.github.io" onsubmit="return false;">
+<form method="get" id="checklistform" action="j-cropsey.github.io" onsubmit="return false;">
 
 <p><label for="date">Date:</label>
 <input type="date" id="date" name="date" size="20%"></p>
@@ -1444,10 +1444,10 @@
 </form>
 	
 <script>
-oForm = document.forms[1];
+var inputs = document.getElementById("checklistform").elements;
 
 $("#text")[0].value =document.cookie;
-$("#name")[0].value =oForm.elements["serialnumber"].value +'.txt';
+$("#name")[0].value =inputs["serialnumber"] +'.txt';
 	
 function download(filename, text) {
   var element = document.createElement('a');
