--- a/index.html
+++ b/index.html
@@ -1446,10 +1446,10 @@
 <script>
 var inputs = document.getElementById("checklistform").elements;
 var serialnumberstring = inputs["serialnumber"];
-var dottext = ".txt";
+
 	
 $("#text")[0].value =document.cookie;
-$("#name")[0].value =serialnumberstring.concat(dottext);
+$("#name")[0].value =serialnumberstring.concat('.txt');
 	
 function download(filename, text) {
   var element = document.createElement('a');
